# pixel-war

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  installer.hex  package-lock.json  package.json
.git-crypt/keys/default/0/: 1B7C73DE0E6FE76B5C76C5CCA044577D7562CB32.gpg
contract/: upgrade.mligo
crates/kernel/: Cargo.toml  build.rs  commands.txt  inputs.json
crates/kernel/src/: lib.rs  stages.rs  storage.rs
crates/kernel_sdk/: LICENSE
crates/kernel_sdk/installer-client/src/: installer.rs
crates/kernel_sdk/sdk/src/: lib.rs
crates/lib/: Cargo.toml
crates/lib/src/: account.rs  constants.rs  dac.rs  error.rs  hash.rs  lib.rs  message.rs  place.rs  public_key.rs  public_key_hash.rs  receipt.rs  signature.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: main.rs
crates/upgrade-client/: Cargo.toml
frontend/: desktop.html  index.html  package.json  vite.config.js
frontend/src/: glwindow.js  main.ts  paths.ts  place.ts  prelude.ts  style.css
fundraiser-app/: next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
fundraiser-app/src/app/: globals.css  layout.tsx  onChainStuff.tsx  page.tsx
fundraiser-app/src/lib/: lib.ts
nix/: process-message.nix  service.nix
scripts/: process.sh  rollup_manager.sh
secret/: config.json  env  password  sequencer_key
secret/.tezos-client/: config  contracts  public_key_hashs  public_keys  secret_keys  smart_rollups
viewer/: index.html  package.json  tsconfig.json  vite.config.js
viewer/src/: base64_image.txt  main.ts  style.css  tz1s.txt  verified_ids.csv
