[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
actix-web = { version = "4.0.0-beta.10" }
actix-web-actors = "4.2.0"
actix = "0.13.0"
actix-files = "0.6.2"
lib = {path = "../lib"}
hex = "0.4.3"
serde_json = "1.0.96"
thiserror = {version = "1.0"}
ed25519-compact = { version ="2.0", default-features = false }
tezos_crypto_rs = { version = "0.4", default-features = false }
serde = "1.0.152"
serde-json-wasm = "0.5.0"
bytestring = "1.3.0"
